Update Hangout Spots link to point to hangoutspots.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="https://map.concept3d.com/?id=1200#!ce/34557?s/">📚 Campus Map</a></li>
                 <li><a href="#">🍜 Food Spots</a></li>
                 <li><a href="#">📖 Study Spots</a></li>
-                <li><a href="#">💙 Hangout Spots</a></li>
+                <li><a href="hangoutspots.html">💙 Hangout Spots</a></li>
                 <li><a href="#">🚌 Transit</a></li>
             </ul>
         </section>
