Update links for Food and Study Spots

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <h2> Campus Guide </h2>
             <ul id="buttons">
                 <li><a href="https://map.concept3d.com/?id=1200#!ce/34557?s/">📚 Campus Map</a></li>
-                <li><a href="#">🍜 Food Spots</a></li>
-                <li><a href="#">📖 Study Spots</a></li>
+                <li><a href="food.html">🍜 Food Spots</a></li>
+                <li><a href="studyspots.html">📖 Study Spots</a></li>
                 <li><a href="hangoutspots.html">💙 Hangout Spots</a></li>
                 <li><a href="#">🚌 Transit</a></li>
             </ul>
